UI: add postman button,update user details

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -8,6 +8,10 @@ button,
     display: none;
 }
 
+#editUserForm {
+    display: none;
+}
+
 table {
     font-family: Arial, sans-serif;
     border: 1px solid;
